# mdformat-zola

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.toml
.github/workflows/: check.yaml  release.yaml
src/mdformat_zola/: __init__.py  _plugin.py  _renderer.py  _syntax.py
src/mdformat_zola/_mdit_plugins/: __init__.py  shortcodes.py
tests/: conftest.py  test_features.py  test_fence.py  test_headings.py  test_integration.py  test_markdown_body.py  test_real_world.py  test_shortcodes_block.py  test_shortcodes_inline.py  test_syntax.py
tests/fixtures/: kitchen_sink.md
